# thymio

src/plugins/robots/thymio/: CMakeLists.txt
src/plugins/robots/thymio/control_interface/: ci_thymio_positioning_sensor.cpp  ci_thymio_positioning_sensor.h
src/plugins/robots/thymio/simulator/: thymio_positioning_sensor.cpp  thymio_positioning_sensor.h
src/testing/: CMakeLists.txt
src/testing/temperature_sensor/: scenario.argos  taxis.lua  temperature_sensor.lua
src/testing/thymio_obstacle_avoidance/: CMakeLists.txt  scenario.argos  thymio_obstacle_avoidance.cpp  thymio_obstacle_avoidance.h
src/testing/thymio_obstacle_avoidance_lua/: scenario.argos  thymio_obstacle_avoidance.lua
